force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__ExpirationPeriodNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpirationPeriodNumber__c</fullName>
    <label>Expiration Period</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpirationPeriodNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>