force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__LoyaltyProgramId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyProgramId__c</fullName>
    <label>Loyalty Program</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyProgramId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>