force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__rel_1697761152468_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761152468_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_Id_map_VoucherDefinition_Par_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Account_Id_map_VoucherDefinition_Par_rel</relationshipLabel>
    <relationshipName>rel_1697761152468_end</relationshipName>
    <type>Lookup</type>
</CustomField>