force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__rel_1697761206588_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761206588_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoucherDefinition_LoyaltyProgramId_m_rel</label>
    <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
    <relationshipLabel>VoucherDefinition_LoyaltyProgramId_m_rel</relationshipLabel>
    <relationshipName>rel_1697761206588_end</relationshipName>
    <type>Lookup</type>
</CustomField>