force-app/main/default/objects/ssot__VoucherDefinition__dlm/fields/ssot__rel_1697761206793_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761206793_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VoucherDefinition_VoucherExpirationT_rel</label>
    <referenceTo>ssot__VoucherDefinition__dlm</referenceTo>
    <relationshipLabel>VoucherDefinition_VoucherExpirationT_rel</relationshipLabel>
    <relationshipName>rel_1697761206793_end</relationshipName>
    <type>Lookup</type>
</CustomField>